@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,22 +31,30 @@ import java.util.List;
 import java.util.Objects;
 
 import jdk.jfr.internal.AnnotationConstruct;
+import jdk.jfr.internal.SecuritySupport;
 import jdk.jfr.internal.Type;
-import jdk.jfr.internal.Utils;
+import jdk.jfr.internal.util.Utils;
 
 /**
  * Describes the event fields and annotation elements.
+ * <p>
+ * The following example shows how the {@code ValueDescriptor} class can
+ * be used to list field information of all types.
+ *
+ * {@snippet class="Snippets" region="ValueDescriptorOverview"}
  *
  * @since 9
  */
 public final class ValueDescriptor {
-
+    private static final String UNKNOWN = new String();
     private final AnnotationConstruct annotationConstruct;
     private final Type type;
     private final String name;
     private final boolean isArray;
     private final boolean constantPool;
     private final String javaFieldName;
+    private String label = UNKNOWN;
+    private String contentType = UNKNOWN;
 
     // package private, invoked by jdk.internal.
     ValueDescriptor(Type type, String name, List<AnnotationElement> annotations, int dimension, boolean constantPool, String fieldName) {
@@ -142,7 +150,7 @@ public final class ValueDescriptor {
         Objects.requireNonNull(type, "type");
         Objects.requireNonNull(name, "name");
         Objects.requireNonNull(annotations, "annotations");
-        Utils.checkRegisterPermission();
+        SecuritySupport.checkRegisterPermission();
         if (!allowArray) {
             if (type.isArray()) {
                 throw new IllegalArgumentException("Array types are not allowed");
@@ -165,7 +173,10 @@ public final class ValueDescriptor {
      * @return a human-readable name, or {@code null} if doesn't exist
      */
     public String getLabel() {
-        return annotationConstruct.getLabel();
+        if (label == UNKNOWN) {
+            label = annotationConstruct.getLabel();;
+        }
+        return label;
     }
 
     /**
@@ -216,14 +227,18 @@ public final class ValueDescriptor {
      * @see ContentType
      */
     public String getContentType() {
-        for (AnnotationElement anno : getAnnotationElements()) {
-            for (AnnotationElement meta : anno.getAnnotationElements()) {
-                if (meta.getTypeName().equals(ContentType.class.getName())) {
-                    return anno.getTypeName();
+        if (contentType == UNKNOWN) {
+            for (AnnotationElement anno : getAnnotationElements()) {
+                for (AnnotationElement meta : anno.getAnnotationElements()) {
+                    if (meta.getTypeName().equals(ContentType.class.getName())) {
+                        contentType = anno.getTypeName();
+                        return contentType;
+                    }
                 }
             }
+            contentType = null;
         }
-        return null;
+        return contentType;
     }
 
     /**
@@ -236,7 +251,7 @@ public final class ValueDescriptor {
      */
     public String getTypeName() {
         if (type.isSimpleType()) {
-            return type.getFields().get(0).getTypeName();
+            return type.getFields().getFirst().getTypeName();
         }
         return type.getName();
     }
