@@ -1,34 +1,30 @@
 /*
- *  Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
- *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+ * Copyright (c) 2022, 2023, Oracle and/or its affiliates. All rights reserved.
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
- *  This code is free software; you can redistribute it and/or modify it
- *  under the terms of the GNU General Public License version 2 only, as
- *  published by the Free Software Foundation.
+ * This code is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License version 2 only, as
+ * published by the Free Software Foundation.
  *
- *  This code is distributed in the hope that it will be useful, but WITHOUT
- *  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- *  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
- *  version 2 for more details (a copy is included in the LICENSE file that
- *  accompanied this code).
+ * This code is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ * version 2 for more details (a copy is included in the LICENSE file that
+ * accompanied this code).
  *
- *  You should have received a copy of the GNU General Public License version
- *  2 along with this work; if not, write to the Free Software Foundation,
- *  Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ * You should have received a copy of the GNU General Public License version
+ * 2 along with this work; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
  *
- *  Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
- *  or visit www.oracle.com if you need additional information or have any
- *  questions.
+ * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+ * or visit www.oracle.com if you need additional information or have any
+ * questions.
  */
 
 import org.testng.annotations.Test;
 
-import java.lang.foreign.Addressable;
-import java.lang.foreign.Linker;
-import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
-import java.lang.foreign.SymbolLookup;
+import java.lang.foreign.*;
+import java.lang.foreign.Arena;
 import java.lang.invoke.MethodHandle;
 import java.nio.file.Path;
 import java.util.concurrent.ExecutorService;
@@ -40,7 +36,7 @@ import static org.testng.Assert.*;
 /*
  * @test
  * @enablePreview
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @requires jdk.foreign.linker != "UNSUPPORTED"
  * @run testng/othervm --enable-native-access=ALL-UNNAMED LibraryLookupTest
  */
 public class LibraryLookupTest {
@@ -51,12 +47,12 @@ public class LibraryLookupTest {
 
     @Test
     void testLoadLibraryConfined() {
-        try (MemorySession session0 = MemorySession.openConfined()) {
-            callFunc(loadLibrary(session0));
-            try (MemorySession session1 = MemorySession.openConfined()) {
-                callFunc(loadLibrary(session1));
-                try (MemorySession session2 = MemorySession.openConfined()) {
-                    callFunc(loadLibrary(session2));
+        try (Arena arena0 = Arena.ofConfined()) {
+            callFunc(loadLibrary(arena0));
+            try (Arena arena1 = Arena.ofConfined()) {
+                callFunc(loadLibrary(arena1));
+                try (Arena arena2 = Arena.ofConfined()) {
+                    callFunc(loadLibrary(arena2));
                 }
             }
         }
@@ -64,21 +60,36 @@ public class LibraryLookupTest {
 
     @Test(expectedExceptions = IllegalStateException.class)
     void testLoadLibraryConfinedClosed() {
-        Addressable addr;
-        try (MemorySession session = MemorySession.openConfined()) {
-            addr = loadLibrary(session);
+        MemorySegment addr;
+        try (Arena arena = Arena.ofConfined()) {
+            addr = loadLibrary(arena);
         }
         callFunc(addr);
     }
 
-    private static Addressable loadLibrary(MemorySession session) {
+    @Test(expectedExceptions = IllegalArgumentException.class)
+    void testLoadLibraryBadName() {
+        try (Arena arena = Arena.ofConfined()) {
+            SymbolLookup.libraryLookup(LIB_PATH.toString() + "\u0000", arena);
+        }
+    }
+
+    @Test
+    void testLoadLibraryBadLookupName() {
+        try (Arena arena = Arena.ofConfined()) {
+            SymbolLookup lookup = SymbolLookup.libraryLookup(LIB_PATH, arena);
+            assertTrue(lookup.find("inc\u0000foobar").isEmpty());
+        }
+    }
+
+    private static MemorySegment loadLibrary(Arena session) {
         SymbolLookup lib = SymbolLookup.libraryLookup(LIB_PATH, session);
-        MemorySegment addr = lib.lookup("inc").get();
-        assertEquals(addr.session(), session);
+        MemorySegment addr = lib.find("inc").get();
+        assertEquals(addr.scope(), session.scope());
         return addr;
     }
 
-    private static void callFunc(Addressable addr) {
+    private static void callFunc(MemorySegment addr) {
         try {
             INC.invokeExact(addr);
         } catch (IllegalStateException ex) {
@@ -94,12 +105,12 @@ public class LibraryLookupTest {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     void testBadLibraryLookupName() {
-        SymbolLookup.libraryLookup("nonExistent", MemorySession.global());
+        SymbolLookup.libraryLookup("nonExistent", Arena.global());
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     void testBadLibraryLookupPath() {
-        SymbolLookup.libraryLookup(Path.of("nonExistent"), MemorySession.global());
+        SymbolLookup.libraryLookup(Path.of("nonExistent"), Arena.global());
     }
 
     @Test
@@ -116,8 +127,8 @@ public class LibraryLookupTest {
         @Override
         public void run() {
             for (int i = 0 ; i < ITERATIONS ; i++) {
-                try (MemorySession session = MemorySession.openConfined()) {
-                    callFunc(loadLibrary(session));
+                try (Arena arena = Arena.ofConfined()) {
+                    callFunc(loadLibrary(arena));
                 }
             }
         }
@@ -125,15 +136,15 @@ public class LibraryLookupTest {
 
     @Test
     void testLoadLibrarySharedClosed() throws Throwable {
-        MemorySession session = MemorySession.openShared();
-        Addressable addr = loadLibrary(session);
+        Arena arena = Arena.ofShared();
+        MemorySegment addr = loadLibrary(arena);
         ExecutorService accessExecutor = Executors.newCachedThreadPool();
         for (int i = 0; i < NUM_ACCESSORS ; i++) {
             accessExecutor.execute(new LibraryAccess(addr));
         }
         while (true) {
             try {
-                session.close();
+                arena.close();
                 break;
             } catch (IllegalStateException ex) {
                 // wait for addressable parameter to be released
@@ -146,9 +157,9 @@ public class LibraryLookupTest {
 
     static class LibraryAccess implements Runnable {
 
-        final Addressable addr;
+        final MemorySegment addr;
 
-        LibraryAccess(Addressable addr) {
+        LibraryAccess(MemorySegment addr) {
             this.addr = addr;
         }
 
