@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,50 +24,55 @@
 /*
  * @test
  * @enablePreview
- * @modules java.base/jdk.internal.ref java.base/jdk.internal.foreign
+ * @modules java.base/jdk.internal.foreign
  * @run testng/othervm TestMemorySession
  */
 
-import java.lang.ref.Cleaner;
-
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 
 import jdk.internal.foreign.MemorySessionImpl;
-import jdk.internal.ref.CleanerFactory;
-
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import static org.testng.Assert.*;
 
+import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.function.UnaryOperator;
 import java.util.stream.IntStream;
 
 public class TestMemorySession {
 
     final static int N_THREADS = 100;
 
-    @Test(dataProvider = "cleaners")
-    public void testConfined(Supplier<Cleaner> cleanerSupplier, UnaryOperator<MemorySession> sessionFunc) {
+    @Test
+    public void testConfined() {
         AtomicInteger acc = new AtomicInteger();
-        Cleaner cleaner = cleanerSupplier.get();
-        MemorySession session = cleaner != null ?
-                MemorySession.openConfined(cleaner) :
-                MemorySession.openConfined();
-        session = sessionFunc.apply(session);
+        Arena arena = Arena.ofConfined();
         for (int i = 0 ; i < N_THREADS ; i++) {
             int delta = i;
-            session.addCloseAction(() -> acc.addAndGet(delta));
+            addCloseAction(arena, () -> acc.addAndGet(delta));
         }
         assertEquals(acc.get(), 0);
 
-        if (cleaner == null) {
-            session.close();
+        arena.close();
+        assertEquals(acc.get(), IntStream.range(0, N_THREADS).sum());
+    }
+
+    @Test(dataProvider = "sharedSessions")
+    public void testSharedSingleThread(ArenaSupplier arenaSupplier) {
+        AtomicInteger acc = new AtomicInteger();
+        Arena session = arenaSupplier.get();
+        for (int i = 0 ; i < N_THREADS ; i++) {
+            int delta = i;
+            addCloseAction(session, () -> acc.addAndGet(delta));
+        }
+        assertEquals(acc.get(), 0);
+
+        if (!TestMemorySession.ArenaSupplier.isImplicit(session)) {
+            TestMemorySession.ArenaSupplier.close(session);
             assertEquals(acc.get(), IntStream.range(0, N_THREADS).sum());
         } else {
             session = null;
@@ -78,47 +83,17 @@ public class TestMemorySession {
         }
     }
 
-    @Test(dataProvider = "cleaners")
-    public void testSharedSingleThread(Supplier<Cleaner> cleanerSupplier, UnaryOperator<MemorySession> sessionFunc) {
+    @Test(dataProvider = "sharedSessions")
+    public void testSharedMultiThread(ArenaSupplier arenaSupplier) {
         AtomicInteger acc = new AtomicInteger();
-        Cleaner cleaner = cleanerSupplier.get();
-        MemorySession session = cleaner != null ?
-                MemorySession.openShared(cleaner) :
-                MemorySession.openShared();
-        session = sessionFunc.apply(session);
-        for (int i = 0 ; i < N_THREADS ; i++) {
-            int delta = i;
-            session.addCloseAction(() -> acc.addAndGet(delta));
-        }
-        assertEquals(acc.get(), 0);
-
-        if (cleaner == null) {
-            session.close();
-            assertEquals(acc.get(), IntStream.range(0, N_THREADS).sum());
-        } else {
-            session = null;
-            int expected = IntStream.range(0, N_THREADS).sum();
-            while (acc.get() != expected) {
-                kickGC();
-            }
-        }
-    }
-
-    @Test(dataProvider = "cleaners")
-    public void testSharedMultiThread(Supplier<Cleaner> cleanerSupplier, UnaryOperator<MemorySession> sessionFunc) {
-        AtomicInteger acc = new AtomicInteger();
-        Cleaner cleaner = cleanerSupplier.get();
         List<Thread> threads = new ArrayList<>();
-        MemorySession session = cleaner != null ?
-                MemorySession.openShared(cleaner) :
-                MemorySession.openShared();
-        session = sessionFunc.apply(session);
-        AtomicReference<MemorySession> sessionRef = new AtomicReference<>(session);
+        Arena session = arenaSupplier.get();
+        AtomicReference<Arena> sessionRef = new AtomicReference<>(session);
         for (int i = 0 ; i < N_THREADS ; i++) {
             int delta = i;
             Thread thread = new Thread(() -> {
                 try {
-                    sessionRef.get().addCloseAction(() -> {
+                    addCloseAction(sessionRef.get(), () -> {
                         acc.addAndGet(delta);
                     });
                 } catch (IllegalStateException ex) {
@@ -133,10 +108,10 @@ public class TestMemorySession {
 
         // if no cleaner, close - not all segments might have been added to the session!
         // if cleaner, don't unset the session - after all, the session is kept alive by threads
-        if (cleaner == null) {
+        if (!TestMemorySession.ArenaSupplier.isImplicit(session)) {
             while (true) {
                 try {
-                    session.close();
+                    TestMemorySession.ArenaSupplier.close(session);
                     break;
                 } catch (IllegalStateException ise) {
                     // session is acquired (by add) - wait some more
@@ -152,7 +127,7 @@ public class TestMemorySession {
             }
         });
 
-        if (cleaner == null) {
+        if (!TestMemorySession.ArenaSupplier.isImplicit(session)) {
             assertEquals(acc.get(), IntStream.range(0, N_THREADS).sum());
         } else {
             session = null;
@@ -166,22 +141,22 @@ public class TestMemorySession {
 
     @Test
     public void testLockSingleThread() {
-        MemorySession session = MemorySession.openConfined();
-        List<MemorySession> handles = new ArrayList<>();
+        Arena arena = Arena.ofConfined();
+        List<Arena> handles = new ArrayList<>();
         for (int i = 0 ; i < N_THREADS ; i++) {
-            MemorySession handle = MemorySession.openConfined();
-            keepAlive(handle, session);
+            Arena handle = Arena.ofConfined();
+            keepAlive(handle, arena);
             handles.add(handle);
         }
 
         while (true) {
             try {
-                session.close();
+                arena.close();
                 assertEquals(handles.size(), 0);
                 break;
             } catch (IllegalStateException ex) {
                 assertTrue(handles.size() > 0);
-                MemorySession handle = handles.remove(0);
+                Arena handle = handles.remove(0);
                 handle.close();
             }
         }
@@ -189,16 +164,15 @@ public class TestMemorySession {
 
     @Test
     public void testLockSharedMultiThread() {
-        MemorySession session = MemorySession.openShared();
+        Arena arena = Arena.ofShared();
         AtomicInteger lockCount = new AtomicInteger();
         for (int i = 0 ; i < N_THREADS ; i++) {
             new Thread(() -> {
-                try (MemorySession handle = MemorySession.openConfined()) {
-                    keepAlive(handle, session);
+                try (Arena handle = Arena.ofConfined()) {
+                    keepAlive(handle, arena);
                     lockCount.incrementAndGet();
                     waitSomeTime();
                     lockCount.decrementAndGet();
-                    handle.close();
                 } catch (IllegalStateException ex) {
                     // might be already closed - do nothing
                 }
@@ -207,7 +181,7 @@ public class TestMemorySession {
 
         while (true) {
             try {
-                session.close();
+                arena.close();
                 assertEquals(lockCount.get(), 0);
                 break;
             } catch (IllegalStateException ex) {
@@ -218,19 +192,19 @@ public class TestMemorySession {
 
     @Test
     public void testCloseEmptyConfinedSession() {
-        MemorySession.openConfined().close();
+        Arena.ofConfined().close();
     }
 
     @Test
     public void testCloseEmptySharedSession() {
-        MemorySession.openShared().close();
+        Arena.ofShared().close();
     }
 
     @Test
     public void testCloseConfinedLock() {
-        MemorySession session = MemorySession.openConfined();
-        MemorySession handle = MemorySession.openConfined();
-        keepAlive(handle, session);
+        Arena arena = Arena.ofConfined();
+        Arena handle = Arena.ofConfined();
+        keepAlive(handle, arena);
         AtomicReference<Throwable> failure = new AtomicReference<>();
         Thread t = new Thread(() -> {
             try {
@@ -249,34 +223,33 @@ public class TestMemorySession {
         }
     }
 
-    @Test(dataProvider = "sessions")
-    public void testSessionAcquires(Supplier<MemorySession> sessionFactory) {
-        MemorySession session = sessionFactory.get();
+    @Test(dataProvider = "allSessions")
+    public void testSessionAcquires(ArenaSupplier ArenaSupplier) {
+        Arena session = ArenaSupplier.get();
         acquireRecursive(session, 5);
-        if (session.isCloseable()) {
-            session.close();
-        }
+        if (!TestMemorySession.ArenaSupplier.isImplicit(session))
+            TestMemorySession.ArenaSupplier.close(session);
     }
 
-    private void acquireRecursive(MemorySession session, int acquireCount) {
-        try (MemorySession handle = MemorySession.openConfined()) {
-            keepAlive(handle, session);
+    private void acquireRecursive(Arena session, int acquireCount) {
+        try (Arena arena = Arena.ofConfined()) {
+            keepAlive(arena, session);
             if (acquireCount > 0) {
                 // recursive acquire
                 acquireRecursive(session, acquireCount - 1);
             }
-            if (session.isCloseable()) {
-                assertThrows(IllegalStateException.class, session::close);
+            if (!ArenaSupplier.isImplicit(session)) {
+                assertThrows(IllegalStateException.class, () -> ArenaSupplier.close(session));
             }
         }
     }
 
     @Test
     public void testConfinedSessionWithImplicitDependency() {
-        MemorySession root = MemorySession.openConfined();
+        Arena root = Arena.ofConfined();
         // Create many implicit sessions which depend on 'root', and let them become unreachable.
         for (int i = 0; i < N_THREADS; i++) {
-            keepAlive(MemorySession.openConfined(Cleaner.create()), root);
+            keepAlive(Arena.ofAuto(), root);
         }
         // Now let's keep trying to close 'root' until we succeed. This is trickier than it seems: cleanup action
         // might be called from another thread (the Cleaner thread), so that the confined session lock count is updated racily.
@@ -288,8 +261,8 @@ public class TestMemorySession {
             } catch (IllegalStateException ex) {
                 kickGC();
                 for (int i = 0 ; i < N_THREADS ; i++) {  // add more races from current thread
-                    try (MemorySession session = MemorySession.openConfined()) {
-                        keepAlive(session, root);
+                    try (Arena arena = Arena.ofConfined()) {
+                        keepAlive(arena, root);
                         // dummy
                     }
                 }
@@ -300,19 +273,19 @@ public class TestMemorySession {
 
     @Test
     public void testConfinedSessionWithSharedDependency() {
-        MemorySession root = MemorySession.openConfined();
+        Arena root = Arena.ofConfined();
         List<Thread> threads = new ArrayList<>();
         // Create many implicit sessions which depend on 'root', and let them become unreachable.
         for (int i = 0; i < N_THREADS; i++) {
-            MemorySession session = MemorySession.openShared(); // create session inside same thread!
-            keepAlive(session, root);
-            Thread t = new Thread(session::close); // close from another thread!
+            Arena arena = Arena.ofShared(); // create session inside same thread!
+            keepAlive(arena, root);
+            Thread t = new Thread(arena::close); // close from another thread!
             threads.add(t);
             t.start();
         }
         for (int i = 0 ; i < N_THREADS ; i++) { // add more races from current thread
-            try (MemorySession session = MemorySession.openConfined()) {
-                keepAlive(session, root);
+            try (Arena arena = Arena.ofConfined()) {
+                keepAlive(arena, root);
                 // dummy
             }
         }
@@ -326,6 +299,25 @@ public class TestMemorySession {
         // Now let's close 'root'. This is trickier than it seems: releases of the confined session happen in different
         // threads, so that the confined session lock count is updated racily. If that happens, the following close will blow up.
         root.close();
+    }
+
+    @Test(dataProvider = "nonCloseableSessions")
+    public void testNonCloseableSessions(ArenaSupplier arenaSupplier) {
+        var arena = arenaSupplier.get();
+        var sessionImpl = ((MemorySessionImpl) arena.scope());
+        assertFalse(sessionImpl.isCloseable());
+        assertThrows(UnsupportedOperationException.class, () ->
+                sessionImpl.close());
+    }
+
+    @Test(dataProvider = "allSessionsAndGlobal")
+    public void testIsCloseableBy(ArenaSupplier arenaSupplier) {
+        var arena = arenaSupplier.get();
+        var sessionImpl = ((MemorySessionImpl) arena.scope());
+        assertEquals(sessionImpl.isCloseableBy(Thread.currentThread()), sessionImpl.isCloseable());
+        Thread otherThread = new Thread();
+        boolean isCloseableByOther = sessionImpl.isCloseable() && !"ConfinedSession".equals(sessionImpl.getClass().getSimpleName());
+        assertEquals(sessionImpl.isCloseableBy(otherThread), isCloseableByOther);
     }
 
     private void waitSomeTime() {
@@ -345,33 +337,80 @@ public class TestMemorySession {
     }
 
     @DataProvider
-    static Object[][] cleaners() {
+    static Object[][] drops() {
         return new Object[][] {
-                { (Supplier<Cleaner>)() -> null, UnaryOperator.identity() },
-                { (Supplier<Cleaner>)Cleaner::create, UnaryOperator.identity() },
-                { (Supplier<Cleaner>)CleanerFactory::cleaner, UnaryOperator.identity() },
-                { (Supplier<Cleaner>)Cleaner::create, (UnaryOperator<MemorySession>)MemorySession::asNonCloseable },
-                { (Supplier<Cleaner>)CleanerFactory::cleaner, (UnaryOperator<MemorySession>)MemorySession::asNonCloseable }
+                { (Supplier<Arena>) Arena::ofConfined},
+                { (Supplier<Arena>) Arena::ofShared},
         };
     }
 
-    @DataProvider
-    static Object[][] sessions() {
-        return new Object[][] {
-                { (Supplier<MemorySession>) MemorySession::openConfined},
-                { (Supplier<MemorySession>) MemorySession::openShared},
-                { (Supplier<MemorySession>) MemorySession::openImplicit},
-                { (Supplier<MemorySession>) MemorySession::global},
-                { (Supplier<MemorySession>) () -> MemorySession.openConfined().asNonCloseable() },
-                { (Supplier<MemorySession>) () -> MemorySession.openShared().asNonCloseable() },
-                { (Supplier<MemorySession>) () -> MemorySession.openImplicit().asNonCloseable() },
-                { (Supplier<MemorySession>) () -> MemorySession.global().asNonCloseable()},
-        };
-    }
-
-    private void keepAlive(MemorySession child, MemorySession parent) {
-        MemorySessionImpl parentImpl = MemorySessionImpl.toSessionImpl(parent);
+    private void keepAlive(Arena child, Arena parent) {
+        MemorySessionImpl parentImpl = MemorySessionImpl.toMemorySession(parent);
         parentImpl.acquire0();
-        child.addCloseAction(parentImpl::release0);
+        addCloseAction(child, parentImpl::release0);
     }
+
+    private void addCloseAction(Arena session, Runnable action) {
+        MemorySessionImpl sessionImpl = MemorySessionImpl.toMemorySession(session);
+        sessionImpl.addCloseAction(action);
+    }
+
+    interface ArenaSupplier extends Supplier<Arena> {
+
+        static void close(Arena arena) {
+            MemorySessionImpl.toMemorySession(arena).close();
+        }
+
+        static boolean isImplicit(Arena arena) {
+            return !MemorySessionImpl.toMemorySession(arena).isCloseable();
+        }
+
+        static ArenaSupplier ofAuto() {
+            return Arena::ofAuto;
+        }
+
+        static ArenaSupplier ofGlobal() {
+            return Arena::global;
+        }
+
+        static ArenaSupplier ofArena(Supplier<Arena> arenaSupplier) {
+            return arenaSupplier::get;
+        }
+    }
+
+    @DataProvider(name = "sharedSessions")
+    static Object[][] sharedSessions() {
+        return new Object[][] {
+                { ArenaSupplier.ofArena(Arena::ofShared) },
+                { ArenaSupplier.ofAuto() },
+        };
+    }
+
+    @DataProvider(name = "allSessions")
+    static Object[][] allSessions() {
+        return new Object[][] {
+                { ArenaSupplier.ofArena(Arena::ofConfined) },
+                { ArenaSupplier.ofArena(Arena::ofShared) },
+                { ArenaSupplier.ofAuto() },
+        };
+    }
+
+    @DataProvider(name = "nonCloseableSessions")
+    static Object[][] nonCloseableSessions() {
+        return new Object[][] {
+                { ArenaSupplier.ofGlobal() },
+                { ArenaSupplier.ofAuto() }
+        };
+    }
+
+    @DataProvider(name = "allSessionsAndGlobal")
+    static Object[][] allSessionsAndGlobal() {
+        return new Object[][] {
+                { ArenaSupplier.ofArena(Arena::ofConfined) },
+                { ArenaSupplier.ofArena(Arena::ofShared) },
+                { ArenaSupplier.ofAuto() },
+                { ArenaSupplier.ofGlobal() },
+        };
+    }
+
 }
