@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -25,18 +25,19 @@
 /*
  * @test
  * @enablePreview
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @requires jdk.foreign.linker != "UNSUPPORTED"
+ * @modules java.base/jdk.internal.foreign
  * @run testng/othervm --enable-native-access=ALL-UNNAMED -Dgenerator.sample.factor=17 TestVarArgs
  */
 
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.ValueLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 
+import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.lang.invoke.MethodHandle;
@@ -45,7 +46,6 @@ import java.lang.invoke.MethodType;
 import java.lang.invoke.VarHandle;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.function.Consumer;
 
 import static java.lang.foreign.MemoryLayout.PathElement.*;
 
@@ -59,26 +59,24 @@ public class TestVarArgs extends CallGeneratorHelper {
         System.loadLibrary("VarArgs");
         try {
             MH_CHECK = MethodHandles.lookup().findStatic(TestVarArgs.class, "check",
-                    MethodType.methodType(void.class, int.class, MemoryAddress.class, List.class));
+                    MethodType.methodType(void.class, int.class, MemorySegment.class, List.class));
         } catch (ReflectiveOperationException e) {
             throw new ExceptionInInitializerError(e);
         }
     }
 
-    static final Addressable VARARGS_ADDR = findNativeOrThrow("varargs");
+    static final MemorySegment VARARGS_ADDR = findNativeOrThrow("varargs");
 
-    @Test(dataProvider = "functions")
+    @Test(dataProvider = "variadicFunctions")
     public void testVarArgs(int count, String fName, Ret ret, // ignore this stuff
                             List<ParamType> paramTypes, List<StructFieldType> fields) throws Throwable {
-        List<Arg> args = makeArgs(paramTypes, fields);
-
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
+            List<Arg> args = makeArgs(arena, paramTypes, fields);
             MethodHandle checker = MethodHandles.insertArguments(MH_CHECK, 2, args);
-            MemorySegment writeBack = LINKER.upcallStub(checker, FunctionDescriptor.ofVoid(C_INT, C_POINTER), session);
-            MemorySegment callInfo = MemorySegment.allocateNative(CallInfo.LAYOUT, session);
-            MemorySegment argIDs = MemorySegment.allocateNative(MemoryLayout.sequenceLayout(args.size(), C_INT), session);
-
-            MemoryAddress callInfoPtr = callInfo.address();
+            MemorySegment writeBack = LINKER.upcallStub(checker, FunctionDescriptor.ofVoid(C_INT, C_POINTER), arena);
+            MemorySegment callInfo = arena.allocate(CallInfo.LAYOUT);
+            MemoryLayout layout = MemoryLayout.sequenceLayout(args.size(), C_INT);
+            MemorySegment argIDs = arena.allocate(layout);
 
             CallInfo.writeback(callInfo, writeBack);
             CallInfo.argIDs(callInfo, argIDs);
@@ -91,15 +89,16 @@ public class TestVarArgs extends CallGeneratorHelper {
             argLayouts.add(C_POINTER); // call info
             argLayouts.add(C_INT); // size
 
-            FunctionDescriptor desc = FunctionDescriptor.ofVoid(argLayouts.toArray(MemoryLayout[]::new))
-                    .asVariadic(args.stream().map(a -> a.layout).toArray(MemoryLayout[]::new));
+            FunctionDescriptor baseDesc = FunctionDescriptor.ofVoid(argLayouts.toArray(MemoryLayout[]::new));
+            Linker.Option varargIndex = Linker.Option.firstVariadicArg(baseDesc.argumentLayouts().size());
+            FunctionDescriptor desc = baseDesc.appendArgumentLayouts(args.stream().map(a -> a.layout).toArray(MemoryLayout[]::new));
 
-            MethodHandle downcallHandle = LINKER.downcallHandle(VARARGS_ADDR, desc);
+            MethodHandle downcallHandle = LINKER.downcallHandle(VARARGS_ADDR, desc, varargIndex);
 
             List<Object> argValues = new ArrayList<>();
-            argValues.add(callInfoPtr); // call info
+            argValues.add(callInfo); // call info
             argValues.add(args.size());  // size
-            args.forEach(a -> argValues.add(a.value));
+            args.forEach(a -> argValues.add(a.value()));
 
             downcallHandle.invokeWithArguments(argValues);
 
@@ -107,29 +106,83 @@ public class TestVarArgs extends CallGeneratorHelper {
         }
     }
 
-    private static List<Arg> makeArgs(List<ParamType> paramTypes, List<StructFieldType> fields) throws ReflectiveOperationException {
+    private static List<ParamType> createParameterTypesForStruct(int extraIntArgs) {
+        List<ParamType> paramTypes = new ArrayList<ParamType>();
+        for (int i = 0; i < extraIntArgs; i++) {
+            paramTypes.add(ParamType.INT);
+        }
+        paramTypes.add(ParamType.STRUCT);
+        return paramTypes;
+    }
+
+    private static List<StructFieldType> createFieldsForStruct(int fieldCount, StructFieldType fieldType) {
+        List<StructFieldType> fields = new ArrayList<StructFieldType>();
+        for (int i = 0; i < fieldCount; i++) {
+            fields.add(fieldType);
+        }
+        return fields;
+    }
+
+    @DataProvider(name = "variadicFunctions")
+    public static Object[][] variadicFunctions() {
+        List<Object[]> downcalls = new ArrayList<>();
+
+        var functionsDowncalls = functions();
+        for (var array : functionsDowncalls) {
+            downcalls.add(array);
+        }
+
+        // Test struct with 4 floats
+        int extraIntArgs = 0;
+        List<StructFieldType> fields = createFieldsForStruct(4, StructFieldType.FLOAT);
+        List<ParamType> paramTypes = createParameterTypesForStruct(extraIntArgs);
+        downcalls.add(new Object[] { 0, "", Ret.VOID, paramTypes, fields });
+
+        // Test struct with 4 floats without enough registers for all fields
+        extraIntArgs = 6;
+        fields = createFieldsForStruct(4, StructFieldType.FLOAT);
+        paramTypes = createParameterTypesForStruct(extraIntArgs);
+        downcalls.add(new Object[] { 0, "", Ret.VOID, paramTypes, fields });
+
+        // Test struct with 2 doubles without enough registers for all fields
+        extraIntArgs = 7;
+        fields = createFieldsForStruct(2, StructFieldType.DOUBLE);
+        paramTypes = createParameterTypesForStruct(extraIntArgs);
+        downcalls.add(new Object[] { 0, "", Ret.VOID, paramTypes, fields });
+
+        // Test struct with 2 ints without enough registers for all fields
+        fields = createFieldsForStruct(2, StructFieldType.INT);
+        paramTypes = createParameterTypesForStruct(extraIntArgs);
+        downcalls.add(new Object[] { 0, "", Ret.VOID, paramTypes, fields });
+
+        return downcalls.toArray(new Object[0][]);
+    }
+
+    private static List<Arg> makeArgs(Arena arena, List<ParamType> paramTypes, List<StructFieldType> fields) {
         List<Arg> args = new ArrayList<>();
         for (ParamType pType : paramTypes) {
             MemoryLayout layout = pType.layout(fields);
-            List<Consumer<Object>> checks = new ArrayList<>();
-            Object arg = makeArg(layout, checks, true);
+            if (layout instanceof ValueLayout.OfFloat) {
+                layout = C_DOUBLE; // promote to double, per C spec
+            }
+            TestValue testValue = genTestValue(layout, arena);
             Arg.NativeType type = Arg.NativeType.of(pType.type(fields));
             args.add(pType == ParamType.STRUCT
-                ? Arg.structArg(type, layout, arg, checks)
-                : Arg.primitiveArg(type, layout, arg, checks));
+                ? Arg.structArg(type, layout, testValue)
+                : Arg.primitiveArg(type, layout, testValue));
         }
         return args;
     }
 
-    private static void check(int index, MemoryAddress ptr, List<Arg> args) {
+    private static void check(int index, MemorySegment ptr, List<Arg> args) {
         Arg varArg = args.get(index);
         MemoryLayout layout = varArg.layout;
         MethodHandle getter = varArg.getter;
-        List<Consumer<Object>> checks = varArg.checks;
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment seg = MemorySegment.ofAddress(ptr, layout.byteSize(), session);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment seg = ptr.asSlice(0, layout)
+                    .reinterpret(arena, null);
             Object obj = getter.invoke(seg);
-            checks.forEach(check -> check.accept(obj));
+            varArg.check(obj);
         } catch (Throwable e) {
             throw new RuntimeException(e);
         }
@@ -143,40 +196,46 @@ public class TestVarArgs extends CallGeneratorHelper {
         static final VarHandle VH_writeback = LAYOUT.varHandle(groupElement("writeback"));
         static final VarHandle VH_argIDs = LAYOUT.varHandle(groupElement("argIDs"));
 
-        static void writeback(MemorySegment seg, Addressable addr) {
-            VH_writeback.set(seg, addr.address());
+        static void writeback(MemorySegment seg, MemorySegment addr) {
+            VH_writeback.set(seg, addr);
         }
-        static void argIDs(MemorySegment seg, Addressable addr) {
-            VH_argIDs.set(seg, addr.address());
+        static void argIDs(MemorySegment seg, MemorySegment addr) {
+            VH_argIDs.set(seg, addr);
         }
     }
 
     private static final class Arg {
+        private final TestValue value;
+
         final NativeType id;
         final MemoryLayout layout;
-        final Object value;
         final MethodHandle getter;
-        final List<Consumer<Object>> checks;
 
-        private Arg(NativeType id, MemoryLayout layout, Object value, MethodHandle getter, List<Consumer<Object>> checks) {
+        private Arg(NativeType id, MemoryLayout layout, TestValue value, MethodHandle getter) {
             this.id = id;
             this.layout = layout;
             this.value = value;
             this.getter = getter;
-            this.checks = checks;
         }
 
-        private static Arg primitiveArg(NativeType id, MemoryLayout layout, Object value, List<Consumer<Object>> checks) {
-            return new Arg(id, layout, value, layout.varHandle().toMethodHandle(VarHandle.AccessMode.GET), checks);
+        private static Arg primitiveArg(NativeType id, MemoryLayout layout, TestValue value) {
+            return new Arg(id, layout, value, layout.varHandle().toMethodHandle(VarHandle.AccessMode.GET));
         }
 
-        private static Arg structArg(NativeType id, MemoryLayout layout, Object value, List<Consumer<Object>> checks) {
-            return new Arg(id, layout, value, MethodHandles.identity(MemorySegment.class), checks);
+        private static Arg structArg(NativeType id, MemoryLayout layout, TestValue value) {
+            return new Arg(id, layout, value, MethodHandles.identity(MemorySegment.class));
+        }
+
+        public void check(Object actual) {
+            value.check().accept(actual);
+        }
+
+        public Object value() {
+            return value.value();
         }
 
         enum NativeType {
             INT,
-            FLOAT,
             DOUBLE,
             POINTER,
             S_I,
@@ -263,12 +322,13 @@ public class TestVarArgs extends CallGeneratorHelper {
             S_PPF,
             S_PPD,
             S_PPP,
+            S_FFFF,
             ;
 
             public static NativeType of(String type) {
                 return NativeType.valueOf(switch (type) {
                     case "int" -> "INT";
-                    case "float" -> "FLOAT";
+                    case "float" -> "DOUBLE"; // promote
                     case "double" -> "DOUBLE";
                     case "void*" -> "POINTER";
                     default -> type.substring("struct ".length());
