@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,30 +26,30 @@
  * @summary Test virtual threads using core reflection
  * @modules java.base/java.lang:+open
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} Reflection.java
- * @run testng/othervm --enable-preview Reflection
+ * @run junit Reflection
  */
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.locks.LockSupport;
 
 import jdk.test.lib.thread.VThreadRunner;
-import org.testng.SkipException;
-import org.testng.annotations.Test;
-import static org.testng.Assert.*;
+import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assumptions.*;
 
-public class Reflection {
+class Reflection {
 
     /**
      * Test invoking static method.
      */
     @Test
-    public void testInvokeStatic1() throws Exception {
+    void testInvokeStatic1() throws Exception {
         VThreadRunner.run(() -> {
             int result = (int) divideMethod().invoke(null, 20, 2);
             assertTrue(result == 10);
@@ -61,7 +61,7 @@ public class Reflection {
      * exception.
      */
     @Test
-    public void testInvokeStatic2() throws Exception {
+    void testInvokeStatic2() throws Exception {
         VThreadRunner.run(() -> {
             try {
                 divideMethod().invoke(null, 20, 0);
@@ -77,7 +77,7 @@ public class Reflection {
      * method with bad parameters.
      */
     @Test
-    public void testInvokeStatic3() throws Exception {
+    void testInvokeStatic3() throws Exception {
         VThreadRunner.run(() -> {
             assertThrows(IllegalArgumentException.class,
                     () -> divideMethod().invoke(null));
@@ -99,7 +99,7 @@ public class Reflection {
      * method triggers its class to be initialized and it fails with exception.
      */
     @Test
-    public void testInvokeStatic4() throws Exception {
+    void testInvokeStatic4() throws Exception {
         VThreadRunner.run(() -> {
             Method foo = BadClass1.class.getDeclaredMethod("foo");
             try {
@@ -123,7 +123,7 @@ public class Reflection {
      * class to be initialized and it fails with an error.
      */
     @Test
-    public void testInvokeStatic5() throws Exception {
+    void testInvokeStatic5() throws Exception {
         VThreadRunner.run(() -> {
             Method foo = BadClass2.class.getDeclaredMethod("foo");
             assertThrows(AbstractMethodError.class, () -> foo.invoke(null));
@@ -141,22 +141,25 @@ public class Reflection {
      * Test that invoking a static method does not pin the carrier thread.
      */
     @Test
-    public void testInvokeStatic6() throws Exception {
-        if (!ThreadBuilders.supportsCustomScheduler())
-            throw new SkipException("No support for custom schedulers");
+    void testInvokeStatic6() throws Exception {
+        assumeTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
         Method parkMethod = Parker.class.getDeclaredMethod("park");
         try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
             Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
             ThreadFactory factory = builder.factory();
+
+            var ready = new CountDownLatch(1);
             Thread vthread = factory.newThread(() -> {
+                ready.countDown();
                 try {
                     parkMethod.invoke(null);   // blocks
                 } catch (Exception e) { }
             });
             vthread.start();
+
             try {
-                // give thread time to be scheduled
-                Thread.sleep(100);
+                // wait for thread to run
+                ready.await();
 
                 // unpark with another virtual thread, runs on same carrier thread
                 Thread unparker = factory.newThread(() -> LockSupport.unpark(vthread));
@@ -172,7 +175,7 @@ public class Reflection {
      * Test invoking instance method.
      */
     @Test
-    public void testInvokeInstance1() throws Exception {
+    void testInvokeInstance1() throws Exception {
         VThreadRunner.run(() -> {
             var adder = new Adder();
             Adder.addMethod().invoke(adder, 5);
@@ -185,7 +188,7 @@ public class Reflection {
      * exception.
      */
     @Test
-    public void testInvokeInstance2() throws Exception {
+    void testInvokeInstance2() throws Exception {
         VThreadRunner.run(() -> {
             var adder = new Adder();
             try {
@@ -202,7 +205,7 @@ public class Reflection {
      * trying to invoke an instance method with null or bad parameters.
      */
     @Test
-    public void testInvokeInstance3() throws Exception {
+    void testInvokeInstance3() throws Exception {
         VThreadRunner.run(() -> {
             var adder = new Adder();
             Method addMethod = Adder.addMethod();
@@ -223,7 +226,7 @@ public class Reflection {
      * Test invoking newInstance to create an object.
      */
     @Test
-    public void testNewInstance1() throws Exception {
+    void testNewInstance1() throws Exception {
         VThreadRunner.run(() -> {
             Constructor<?> ctor = Adder.class.getDeclaredConstructor(long.class);
             Adder adder = (Adder) ctor.newInstance(10);
@@ -236,7 +239,7 @@ public class Reflection {
      * exception.
      */
     @Test
-    public void testNewInstance2() throws Exception {
+    void testNewInstance2() throws Exception {
         VThreadRunner.run(() -> {
             Constructor<?> ctor = Adder.class.getDeclaredConstructor(long.class);
             try {
@@ -253,7 +256,7 @@ public class Reflection {
      * with bad parameters.
      */
     @Test
-    public void testNewInstance3() throws Exception {
+    void testNewInstance3() throws Exception {
         VThreadRunner.run(() -> {
             var adder = new Adder();
             Constructor<?> ctor = Adder.class.getDeclaredConstructor(long.class);
@@ -275,7 +278,7 @@ public class Reflection {
      * triggers the class to be initialized and it fails with exception.
      */
     @Test
-    public void testNewInstance4() throws Exception {
+    void testNewInstance4() throws Exception {
         VThreadRunner.run(() -> {
             Constructor<?> ctor = BadClass3.class.getDeclaredConstructor();
             try {
@@ -299,7 +302,7 @@ public class Reflection {
      * to be initialized and it fails with an error.
      */
     @Test
-    public void testNewInstance5() throws Exception {
+    void testNewInstance5() throws Exception {
         VThreadRunner.run(() -> {
             Constructor<?> ctor = BadClass4.class.getDeclaredConstructor();
             assertThrows(AbstractMethodError.class, () -> ctor.newInstance((Object[])null));
@@ -317,24 +320,33 @@ public class Reflection {
      * Test that newInstance does not pin the carrier thread
      */
     @Test
-    public void testNewInstance6() throws Exception {
-        if (!ThreadBuilders.supportsCustomScheduler())
-            throw new SkipException("No support for custom schedulers");
+    void testNewInstance6() throws Exception {
+        assumeTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
         Constructor<?> ctor = Parker.class.getDeclaredConstructor();
         try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
             Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
             ThreadFactory factory = builder.factory();
+
+            var ready = new CountDownLatch(1);
             Thread vthread = factory.newThread(() -> {
+                ready.countDown();
                 try {
                     ctor.newInstance();
                 } catch (Exception e) { }
             });
             vthread.start();
 
-            Thread.sleep(100); // give thread time to be scheduled
+            try {
+                // wait for thread to run
+                ready.await();
 
-            // unpark with another virtual thread, runs on same carrier thread
-            factory.newThread(() -> LockSupport.unpark(vthread)).start();
+                // unpark with another virtual thread, runs on same carrier thread
+                Thread unparker = factory.newThread(() -> LockSupport.unpark(vthread));
+                unparker.start();
+                unparker.join();
+            } finally {
+                LockSupport.unpark(vthread);  // in case test fails
+            }
         }
     }
 
